--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://iamPhong.github.io/mycv",
+  "homepage": "http://danhnguyen1998.github.io/nmd_cv",
   "name": "mycv",
   "version": "0.1.0",
   "private": true,
